{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 17,
  "lineage": "d717e9bc-abc7-2730-4b8c-06a48eeb3982",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:511874874257:internet-gateway/igw-0487e2f72dec82221",
            "id": "igw-0487e2f72dec82221",
            "owner_id": "511874874257",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "osaka-igw-main"
            },
            "tags_all": {
              "Name": "osaka-igw-main"
            },
            "vpc_id": "vpc-06b56736fb7806ae7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "igw-0487e2f72dec82221",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privates_without_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:511874874257:route-table/rtb-006bfa80f15cd9851",
            "id": "rtb-006bfa80f15cd9851",
            "owner_id": "511874874257",
            "propagating_vgws": [],
            "region": "ap-northeast-3",
            "route": [],
            "tags": {
              "Name": "osaka-route-private-1"
            },
            "tags_all": {
              "Name": "osaka-route-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b56736fb7806ae7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtb-006bfa80f15cd9851",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:511874874257:route-table/rtb-0194e01b2471c1d36",
            "id": "rtb-0194e01b2471c1d36",
            "owner_id": "511874874257",
            "propagating_vgws": [],
            "region": "ap-northeast-3",
            "route": [],
            "tags": {
              "Name": "osaka-route-private-2"
            },
            "tags_all": {
              "Name": "osaka-route-private-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b56736fb7806ae7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtb-0194e01b2471c1d36",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:511874874257:route-table/rtb-01f60ab115e2d3342",
            "id": "rtb-01f60ab115e2d3342",
            "owner_id": "511874874257",
            "propagating_vgws": [],
            "region": "ap-northeast-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0487e2f72dec82221",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "osaka-route-public"
            },
            "tags_all": {
              "Name": "osaka-route-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b56736fb7806ae7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtb-01f60ab115e2d3342",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020e3f490ac58fe0c",
            "region": "ap-northeast-3",
            "route_table_id": "rtb-006bfa80f15cd9851",
            "subnet_id": "subnet-03f6e2bcb03b8e534"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-020e3f490ac58fe0c",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_eip.nat_ips",
            "aws_nat_gateway.private_nat_gws",
            "aws_route_table.privates_with_nat",
            "aws_route_table.privates_without_nat",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0570a29b2a6f4ab88",
            "region": "ap-northeast-3",
            "route_table_id": "rtb-0194e01b2471c1d36",
            "subnet_id": "subnet-0972ef864bfd3134f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-0570a29b2a6f4ab88",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_eip.nat_ips",
            "aws_nat_gateway.private_nat_gws",
            "aws_route_table.privates_with_nat",
            "aws_route_table.privates_without_nat",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d88f19c2b917f20",
            "region": "ap-northeast-3",
            "route_table_id": "rtb-01f60ab115e2d3342",
            "subnet_id": "subnet-031fe3f1365cdb26d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-01d88f19c2b917f20",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.publics",
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052991a5e43094240",
            "region": "ap-northeast-3",
            "route_table_id": "rtb-01f60ab115e2d3342",
            "subnet_id": "subnet-08b376ad1c5694b94"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-052991a5e43094240",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.publics",
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "db",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:511874874257:security-group/sg-0587143b24aa152f5",
            "description": "allow ssh, mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0587143b24aa152f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "fw-db",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-db"
            },
            "tags_all": {
              "Name": "fw-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b56736fb7806ae7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-0587143b24aa152f5",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "redis",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:511874874257:security-group/sg-0763ebbf48cbbf73b",
            "description": "allow ssh, redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0763ebbf48cbbf73b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "fw-redis",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-redis"
            },
            "tags_all": {
              "Name": "fw-redis"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b56736fb7806ae7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-0763ebbf48cbbf73b",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "web",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:511874874257:security-group/sg-043353846c63d8049",
            "description": "allow http, https, ssh, icmp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043353846c63d8049",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "fw-web",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-web"
            },
            "tags_all": {
              "Name": "fw-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b56736fb7806ae7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-043353846c63d8049",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:511874874257:subnet/subnet-03f6e2bcb03b8e534",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.3.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f6e2bcb03b8e534",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "osaka-subnet-private-1"
            },
            "tags_all": {
              "Name": "osaka-subnet-private-1"
            },
            "vpc_id": "vpc-06b56736fb7806ae7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-03f6e2bcb03b8e534",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:511874874257:subnet/subnet-0972ef864bfd3134f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3b",
            "availability_zone_id": "apne3-az1",
            "cidr_block": "10.3.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0972ef864bfd3134f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "osaka-subnet-private-2"
            },
            "tags_all": {
              "Name": "osaka-subnet-private-2"
            },
            "vpc_id": "vpc-06b56736fb7806ae7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-0972ef864bfd3134f",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:511874874257:subnet/subnet-031fe3f1365cdb26d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.3.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031fe3f1365cdb26d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "osaka-subnet-public-1"
            },
            "tags_all": {
              "Name": "osaka-subnet-public-1"
            },
            "vpc_id": "vpc-06b56736fb7806ae7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-031fe3f1365cdb26d",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:511874874257:subnet/subnet-08b376ad1c5694b94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3b",
            "availability_zone_id": "apne3-az1",
            "cidr_block": "10.3.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b376ad1c5694b94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "osaka-subnet-public-2"
            },
            "tags_all": {
              "Name": "osaka-subnet-public-2"
            },
            "vpc_id": "vpc-06b56736fb7806ae7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-08b376ad1c5694b94",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:511874874257:vpc/vpc-06b56736fb7806ae7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-0e2b2f6e58e085600",
            "default_route_table_id": "rtb-01aa90f6a78dfc925",
            "default_security_group_id": "sg-0ea0df052ff2ae6a5",
            "dhcp_options_id": "dopt-08bb77c8894150703",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06b56736fb7806ae7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01aa90f6a78dfc925",
            "owner_id": "511874874257",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "osaka-vpc-main"
            },
            "tags_all": {
              "Name": "osaka-vpc-main"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "vpc-06b56736fb7806ae7",
            "region": "ap-northeast-3"
          }
        }
      ]
    }
  ]
}